deleteGroup bugfix